[package]
name = "lumitest"
version = "0.1.0"
authors = ["etienne <ede-ram@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminance = "0.43.1"
luminance-glfw = "0.14.4"
luminance-windowing = "0.9"
glfw = "0.41"
luminance-gl = "0.16.0"
luminance-derive = "0.6"
image = "0.23"
